--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "skywatch",
-  "version": "0.0.1",
+  "version": "0.2.0",
   "description": "reactive observer",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./test"
   },
   "repository": {
     "type": "git",
