--- a/.babelrc
+++ b/.babelrc
@@ -2,24 +2,19 @@
   "presets": [
     ["env", {
       "targets": {
-        "node": "current"
+        "browsers": ["last 2 versions", ">= 5%"]
       }
     }]
   ],
-  "sourceMaps": "both",
   "plugins": [
-    "transform-decorators-legacy",
     "transform-object-rest-spread",
     "transform-runtime"
   ],
   "env": {
     "test": {
       "plugins": [
-        ["istanbul"]
+        ["istanbul", "source-map-support"]
       ]
-    },
-    "production": {
-      "plugins": ["source-map-support"]
     }
   }
 }
