refactor: upgrade jquery ♻️

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "skywatch",
-  "version": "0.3.1",
+  "version": "0.3.5",
   "description": "reactive ViewportObserver and ResizeObserver",
   "main": "dist/skywatch.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "lint-fix": "./node_modules/.bin/eslint --fix src --ext .js",
     "clean-dist": "node ./bin/clean-dist.js",
     "build": "npm run clean-dist && NODE_ENV=production npm run webpack-build",
-    "webpack-build": "./node_modules/.bin/webpack --progress -p"
+    "webpack-build": "./node_modules/.bin/webpack --progress -p --display-modules"
   },
   "repository": {
     "type": "git",
@@ -22,18 +22,17 @@
     "viewport",
     "resize"
   ],
-  "dependencies": {
-    "jquery": "2.2.4"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "amd-define-factory-patcher-loader": "1.0.0",
     "babel-cli": "6.24.1",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-loader": "7.1.2",
-    "babel-runtime": "6.18.0",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.6.1",
+    "babel-runtime": "6.18.0",
     "del": "2.2.2",
     "eslint": "3.19.0",
     "eslint-config-standard": "10.2.1",
@@ -42,6 +41,8 @@
     "eslint-plugin-promise": "3.5.0",
     "eslint-plugin-standard": "3.0.1",
     "eslint-watch": "3.1.0",
+    "jquery": "3.3.1",
+    "sizzle": "2.3.3",
     "uglifyjs-webpack-plugin": "1.1.2",
     "webpack": "3.5.5"
   },
